<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:background="@drawable/logo_nuevo"
    tools:context=".Interfaz.Activities.LogInActivity"
    android:id="@+id/logInActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarLogInActivity"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tamaño_appbar"
        android:background="#ff7043"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Theme.Macchiato"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="Bienvenido"
            android:textColor="@color/black"
            android:textSize="@dimen/tamaño_titulo_appbar"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="8dp" />

    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:id="@+id/linearLayoutLogInActivity"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/margin_appbar"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto"
            android:text="@string/textUsuario"
            android:textColor="@color/black"
            android:textSize="@dimen/tamaño_letras_normales"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:fontFamily="casual"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/texto_para_escribir" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/textContraseña"
            android:textColor="@color/black"
            android:textSize="@dimen/tamaño_letras_normales"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:inputType="textPassword"
            android:textSize="@dimen/texto_para_escribir" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/shape"
                android:fontFamily="@font/roboto"
                android:onClick="session"
                android:text="@string/textIniciar_sesion"
                android:textSize="@dimen/tamaño_letras_botones"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="0.5"
                android:background="@drawable/shape"
                android:fontFamily="@font/roboto"
                android:onClick="register"
                android:text="@string/textRegistrarse"
                android:textSize="@dimen/tamaño_letras_botones"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/cont_olvidada_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:text="Olvide mi contraseña"
            android:textColor="@color/black"
            android:textColorHint="#000000"
            android:textSize="@dimen/tamaño_letras_normales"
            android:textStyle="bold|italic" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
