<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentSesionIniciada"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Interfaz.Fragments.PerfilFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tamaño_appbar"
        android:background="#ff7043"
        android:fontFamily="casual"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Theme.Macchiato"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="Perfil"
            android:textColor="@color/black"
            android:textSize="@dimen/tamaño_titulo_appbar"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="8dp" />

    </androidx.appcompat.widget.Toolbar>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="48dp">

        <TextView
            android:id="@+id/nombreActual_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/textUsuario"
            android:textColor="@color/black"
            android:textSize="@dimen/tamaño_letras_normales"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/usuarioActual_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/usuarioActual_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="usuario"
            android:textColor="@color/black"
            android:textSize="@dimen/tamaño_letras_normales"
            app:layout_constraintBottom_toTopOf="@+id/textView17"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nombreActual_id" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="Correo Electrónico:"
            android:textColor="@color/black"
            android:textSize="@dimen/tamaño_letras_normales"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/correoActual_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usuarioActual_id" />

        <TextView
            android:id="@+id/correoActual_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="correo electronico"
            android:textColor="@color/black"
            android:textSize="@dimen/tamaño_letras_normales"
            app:layout_constraintBottom_toTopOf="@+id/buttonIniciarSesion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <Button
            android:id="@+id/buttonIniciarSesion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/shape"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="CERRAR SESIÓN"
            android:textSize="@dimen/tamaño_letras_botones"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/id_descargas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/correoActual_id" />

        <Button
            android:id="@+id/id_descargas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape"
            android:fontFamily="@font/roboto"
            android:text="descargar cronograma"
            android:textSize="@dimen/tamaño_letras_botones"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/buttonEditar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonIniciarSesion" />

        <Button
            android:id="@+id/buttonEditar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/shape"
            android:fontFamily="@font/roboto"
            android:text="CAMBIAR CONTRASEÑA"
            android:textSize="@dimen/tamaño_letras_botones"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/buttonHistorial"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_descargas" />

        <Button
            android:id="@+id/buttonHistorial"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/shape"
            android:fontFamily="@font/roboto"
            android:text="historial academico"
            android:textSize="@dimen/tamaño_letras_botones"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonEditar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>