...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Interfaz.Activities.HistorialAcademicoActivity"
    android:id="@+id/historialAcademicoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="@dimen/tamaño_appbar"
        android:background="#ff7043"
...
        app:fab_addButtonColorPressed="?attr/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/addn">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/aniadir_floating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="?attr/colorAccent"
            app:fab_colorPressed="?attr/colorAccent"
            app:fab_icon="@drawable/addn"
            app:fab_size="mini"
...
