<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/nav_horario"
        

        android:icon="@drawable/ic_calendario">

    </item>

    <item android:id="@+id/nav_materias"

        android:icon="@drawable/ic_libro_abierto">
     </item>

    <item android:id="@+id/nav_ajustes"

        android:icon="@drawable/ic_configuraciones">
    </item>

    <item android:id="@+id/nav_perfil"

        android:icon="@drawable/ic_usuario">
    </item>


</menu>