<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Interfaz.Fragments.HorarioFragment"
    android:id="@+id/fragmentHorario"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tamaño_appbar"
        android:background="#ff7043"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Theme.Macchiato"

        >

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="Horario"
            android:textColor="@color/black"
            android:textSize="@dimen/tamaño_titulo_appbar"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linearLayoutFragmentHorario"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_appbar"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="Nivel"
            android:textColor="@color/black"
            android:textSize="@dimen/tamaño_letras_normales" />

        <Spinner
            android:id="@+id/spinnerNivel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="Materia"
            android:textColor="@color/black"
            android:textSize="@dimen/tamaño_letras_normales" />

        <Spinner

            android:id="@+id/spinnerMateria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerCheckbox"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.recyclerview.widget.RecyclerView>


            <com.getbase.floatingactionbutton.FloatingActionsMenu
                android:id="@+id/floatingHistorialAcademico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:foregroundGravity="right"
                app:fabSize="mini"
                app:fab_addButtonColorNormal="?attr/colorAccent"
                app:fab_addButtonColorPressed="?attr/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/addn">

                <com.getbase.floatingactionbutton.FloatingActionButton
                    android:id="@+id/idHorarioAutomatico"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fab_colorNormal="?attr/colorAccent"
                    app:fab_colorPressed="?attr/colorAccent"
                    app:fab_icon="@drawable/ic_piloto_automatico"
                    app:fab_size="mini"
                    app:fab_title="Favorito" />

                <com.getbase.floatingactionbutton.FloatingActionButton
                    android:id="@+id/eliminar_materias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fab_colorNormal="?attr/colorAccent"
                    app:fab_colorPressed="?attr/colorAccent"
                    app:fab_icon="@drawable/ic_eliminar"
                    app:fab_size="mini"
                    app:fab_title="Favorito" />

            </com.getbase.floatingactionbutton.FloatingActionsMenu>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</FrameLayout>