<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:title=""
        android:id="@+id/cambiar_a_generar"
       android:icon="@drawable/ic_mostrar"
        app:showAsAction="always"
        />


</menu>