<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Interfaz.Fragments.HorarioFragment"
    android:id="@+id/mostrarHorarioFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:orientation="horizontal"
        />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tamaño_appbar"
        android:background="#ff7043"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Theme.Macchiato">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="Horario"
            android:textColor="@color/black"
            android:textSize="@dimen/tamaño_titulo_appbar"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="48dp"
        android:orientation="vertical"
        android:padding="20dp"
        android:id="@+id/linearLayoutMostrarMaterias">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerMostrar"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</FrameLayout>